kubernetes/ingress/nexus-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: oauth2-prefix-stripprefix
  namespace: nexus
spec:
  stripPrefix:
    prefixes:
      - /oauth2
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nexus-ingress
  namespace: nexus
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`nexus.ebruno.fr`) && PathPrefix(`/oauth2/`)
      priority: 20
      services:
        - name: oauth2-proxy-lb
          port: 4180
          healthCheck:
            path: /oauth2/start
            interval: 10s
            timeout: 3s
    - kind: Rule
      match: Host(`nexus.ebruno.fr`) && !PathPrefix(`/oauth2/`)
      priority: 10
      middlewares:
        - name: fwd-auth
      services:
        - name: nexus-nexus3
          port: http
  tls:
    certResolver: letsencrypt-ovh
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: fwd-auth
  namespace: nexus
spec:
  forwardAuth:
    address: http://oauth2-proxy.oauth2-proxy.svc.cluster.local:4180/oauth2/start?rd=https://nexus.ebruno.fr/
    trustForwardHeader: true
    authResponseHeaders:
      - X-Forwarded-User
      - X-Forwarded-Email
